Replace "FastNext" branding with "PragmaStack" across the project
- Updated all references, metadata, and templates to reflect the new branding, including layout files, components, and documentation.
- Replaced hardcoded color tokens like `green-600` with semantic tokens (`success`, `warning`, etc.) for improved design consistency.
- Enhanced `globals.css` with new color tokens for success, warning, and destructive states using the OKLCH color model.
- Added comprehensive branding guidelines and updated the design system documentation to align with the new identity.
- Updated tests and mocks to reflect the branding changes and ensured all visual/verbal references match "PragmaStack".
- Added new `branding/README.md` and `branding` docs for mission, values, and visual identity definition.

--- a/frontend/docs/I18N.md
+++ b/frontend/docs/I18N.md
@@ -1,6 +1,6 @@
 # Internationalization (i18n) Guide
 
-This document describes the internationalization implementation in the FastNext Template.
+This document describes the internationalization implementation in the PragmaStack.
 
 ## Overview
 
